--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -48,7 +48,10 @@
     "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
     "# max_nodes should be no greater than 4.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "cluster_name = \"hrcluster\"\n",
+    "compute_config = AmlCompute.provisioning_configuration(vm_size = \"Standard_D2_V2\", max_nodes = 4)\n",
+    "cpu_cluster = ComputeTarget.create(ws, cluster_name, compute_config)\n",
+    "cpu_cluster.wait_for_completion(show_output = True)"
    ]
   },
   {
@@ -80,19 +83,22 @@
     "import os\n",
     "\n",
     "# Specify parameter sampler\n",
-    "ps = ### YOUR CODE HERE ###\n",
+    "ps = RandomParameterSampling({\n",
+    "    \"learning_rate\":uniform(0.05, 0.1),\n",
+    "    \"keep_probability\":uniform(0.05, 0.1)\n",
+    "})\n",
     "\n",
     "# Specify a Policy\n",
-    "policy = ### YOUR CODE HERE ###\n",
+    "policy = BanditPolicy(slack_factor = 0.1, evaluation_interval=1, delay_evaluation=5)\n",
     "\n",
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
     "\n",
     "# Create a SKLearn estimator for use with train.py\n",
-    "est = ### YOUR CODE HERE ###\n",
+    "est = SKLearn(\"./train.py\", compute_target = cpu_cluster)\n",
     "\n",
     "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-    "hyperdrive_config = ### YOUR CODE HERE ###"
+    "hyperdrive_config = HyperDriveConfig(run_config = cpu_cluster, hyperparameter_sampling = ps, policy = policy, primary_metric_goal = PrimaryMetricGoal.MAXIMIZE, primary_metric_name = \"accuracy\", max_total_runs = 10, max_concurrent_runs = 4)"
    ]
   },
   {
@@ -102,8 +108,8 @@
    "outputs": [],
    "source": [
     "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
-    "\n",
-    "### YOUR CODE HERE ###"
+    "hyperdrive_run = exp.submit(config=hyperdrive_config)\n",
+    "RunDetails(hyperdrive_run).show()"
    ]
   },
   {
@@ -127,8 +133,8 @@
    "source": [
     "import joblib\n",
     "# Get your best run and save the model from that run.\n",
-    "\n",
-    "### YOUR CODE HERE ###"
+    "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
+    "parameter_values = best_run.get_details()['runDefinition']['Arguments']"
    ]
   },
   {
@@ -143,7 +149,8 @@
     "# Data is available at: \n",
     "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "ds = TabularDatasetFactory.from_delimited_files(\n",
+    "    \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\")"
    ]
   },
   {
@@ -168,7 +175,7 @@
     "from train import clean_data\n",
     "\n",
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(### YOUR DATA OBJECT HERE ###)"
+    "x, y = clean_data(ds)"
    ]
   },
   {
@@ -198,11 +205,11 @@
     "# Azure tenant, which will incur personal costs.\n",
     "automl_config = AutoMLConfig(\n",
     "    experiment_timeout_minutes=30,\n",
-    "    task=,\n",
-    "    primary_metric=,\n",
-    "    training_data=,\n",
-    "    label_column_name=,\n",
-    "    n_cross_validations=)"
+    "    task='classification',\n",
+    "    primary_metric='accuracy',\n",
+    "    training_data=x,\n",
+    "    label_column_name=y,\n",
+    "    n_cross_validations=5)"
    ]
   },
   {
@@ -222,8 +229,7 @@
    "outputs": [],
    "source": [
     "# Submit your automl run\n",
-    "\n",
-    "### YOUR CODE HERE ###"
+    "automl_run = exp.config(automl_config, show_output=False)   "
    ]
   },
   {
@@ -233,8 +239,8 @@
    "outputs": [],
    "source": [
     "# Retrieve and save your best automl model.\n",
-    "\n",
-    "### YOUR CODE HERE ###"
+    "best_automl_run = automl_run.get_best_run_by_primary_metric()\n",
+    "parameter_values = best_automl_run.get_details()['runDefinition']['Arguments']"
    ]
   }
  ],
