--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "gather": {
      "logged": 1598275788035
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'azureml'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-3a0f49831883>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mazureml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcore\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mWorkspace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mExperiment\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mws\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWorkspace\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"udacity-project\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mexp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mExperiment\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mworkspace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mws\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"udacity-project\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'azureml'"
+     ]
+    }
+   ],
    "source": [
     "from azureml.core import Workspace, Experiment\n",
     "\n",
@@ -134,7 +146,8 @@
     "import joblib\n",
     "# Get your best run and save the model from that run.\n",
     "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
-    "parameter_values = best_run.get_details()['runDefinition']['Arguments']"
+    "parameter_values = best_run.get_details()['runDefinition']['Arguments']\n",
+    "joblib.dump(value = parameter_values, filename='hyperdrive_model.joblib')"
    ]
   },
   {
@@ -173,9 +186,12 @@
    "outputs": [],
    "source": [
     "from train import clean_data\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(ds)"
+    "x, y = clean_data(ds)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    x, y, test_size=0.33, random_state=42)"
    ]
   },
   {
@@ -207,8 +223,8 @@
     "    experiment_timeout_minutes=30,\n",
     "    task='classification',\n",
     "    primary_metric='accuracy',\n",
-    "    training_data=x,\n",
-    "    label_column_name=y,\n",
+    "    training_data=x_train,\n",
+    "    label_column_name=\"y\",\n",
     "    n_cross_validations=5)"
    ]
   },
@@ -240,7 +256,8 @@
    "source": [
     "# Retrieve and save your best automl model.\n",
     "best_automl_run = automl_run.get_best_run_by_primary_metric()\n",
-    "parameter_values = best_automl_run.get_details()['runDefinition']['Arguments']"
+    "parameter_values = best_automl_run.get_details()['runDefinition']['Arguments']\n",
+    "joblib.dump(value = parameter_values, filename='hyperdrive_model.joblib')"
    ]
   }
  ],
@@ -263,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3-final"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
