--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -259,6 +259,17 @@
     "parameter_values = best_automl_run.get_details()['runDefinition']['Arguments']\n",
     "joblib.dump(value = parameter_values, filename='hyperdrive_model.joblib')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Delete compute cluster\n",
+    "compute_target = get_compute(ws, cluster_name = \"hrcluster\")\n",
+    "delete_compute(compute_target)"
+   ]
   }
  ],
  "metadata": {
