--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "from azureml.core import Workspace, Experiment\n",
     "\n",
-    "ws = Workspace.get(name=\"udacity-project\")\n",
+    "ws = Workspace.get(name=\"\")\n",
     "exp = Experiment(workspace=ws, name=\"udacity-project\")\n",
     "\n",
     "print('Workspace name: ' + ws.name, \n",
@@ -107,10 +107,10 @@
     "    os.mkdir(\"./training\")\n",
     "\n",
     "# Create a SKLearn estimator for use with train.py\n",
-    "est = SKLearn(\"./train.py\", compute_target = cpu_cluster)\n",
+    "est = SKLearn(\"train.py\", compute_target = cpu_cluster)\n",
     "\n",
     "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-    "hyperdrive_config = HyperDriveConfig(run_config = cpu_cluster, hyperparameter_sampling = ps, policy = policy, primary_metric_goal = PrimaryMetricGoal.MAXIMIZE, primary_metric_name = \"accuracy\", max_total_runs = 10, max_concurrent_runs = 4)"
+    "hyperdrive_config = HyperDriveConfig(estimator = est, hyperparameter_sampling = ps, policy = policy, primary_metric_goal = PrimaryMetricGoal.MAXIMIZE, primary_metric_name = \"Accuracy\", max_total_runs = 10, max_concurrent_runs = 4)"
    ]
   },
   {
