--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -222,7 +222,7 @@
     "automl_config = AutoMLConfig(\n",
     "    experiment_timeout_minutes=30,\n",
     "    task='classification',\n",
-    "    primary_metric='accuracy',\n",
+    "    primary_metric='Accuracy',\n",
     "    training_data=x_train,\n",
     "    label_column_name=\"y\",\n",
     "    n_cross_validations=5)"
@@ -267,8 +267,7 @@
    "outputs": [],
    "source": [
     "#Delete compute cluster\n",
-    "compute_target = get_compute(ws, cluster_name = \"hrcluster\")\n",
-    "delete_compute(compute_target)"
+    "cpu_cluster.delete()"
    ]
   }
  ],
