--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "from azureml.core import Workspace, Experiment\n",
     "\n",
-    "ws = Workspace.get(name=\"\")\n",
+    "ws = Workspace.get(name=\"quick-starts-ws-128336\")\n",
     "exp = Experiment(workspace=ws, name=\"udacity-project\")\n",
     "\n",
     "print('Workspace name: ' + ws.name, \n",
@@ -96,8 +96,8 @@
     "\n",
     "# Specify parameter sampler\n",
     "ps = RandomParameterSampling({\n",
-    "    \"learning_rate\":uniform(0.05, 0.1),\n",
-    "    \"keep_probability\":uniform(0.05, 0.1)\n",
+    "    \"--C\":uniform(0.0, 1.5),\n",
+    "    \"--max_iter\":uniform(100, 200, 300, 600)\n",
     "})\n",
     "\n",
     "# Specify a Policy\n",
@@ -107,7 +107,7 @@
     "    os.mkdir(\"./training\")\n",
     "\n",
     "# Create a SKLearn estimator for use with train.py\n",
-    "est = SKLearn(\"train.py\", compute_target = cpu_cluster)\n",
+    "est = SKLearn(source_directory = '.', entry_script = \"train.py\", compute_target = cpu_cluster)\n",
     "\n",
     "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
     "hyperdrive_config = HyperDriveConfig(estimator = est, hyperparameter_sampling = ps, policy = policy, primary_metric_goal = PrimaryMetricGoal.MAXIMIZE, primary_metric_name = \"Accuracy\", max_total_runs = 10, max_concurrent_runs = 4)"
